--- a/ts3-bot-service-api/pom.xml
+++ b/ts3-bot-service-api/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ts3-bot-db-api</artifactId>
+        <artifactId>ts3-bot</artifactId>
         <groupId>de.esports.aeq</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>de.esports.aeq</groupId>
             <artifactId>ts3-bot-db-api</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
